--- a/SceneScan/Base.lproj/Main.storyboard
+++ b/SceneScan/Base.lproj/Main.storyboard
@@ -1,37 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KEU-CS-VCd">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Capture-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="captureVC" title="Capture" id="BV1-FR-VrT" customClass="CaptureViewController" customModule="SceneScan" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="U0K-SW-4ec">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </arscnView>
+                            <arView multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kvk-Rf-fhJ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            </arView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qoo-Ct-2tF">
+                                <rect key="frame" x="167" y="746" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="D8l-0t-5uG"/>
+                                    <constraint firstAttribute="height" constant="80" id="fcS-gX-Sbs"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="recordingButton_173x173"/>
+                                <connections>
+                                    <action selector="onCaptureBtn:" destination="BV1-FR-VrT" eventType="touchUpInside" id="ehW-Gt-TCY"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="qoo-Ct-2tF" firstAttribute="centerX" secondItem="U0K-SW-4ec" secondAttribute="centerX" id="BJH-2E-c7i"/>
+                            <constraint firstAttribute="bottom" secondItem="qoo-Ct-2tF" secondAttribute="bottom" constant="70" id="J64-7W-guW"/>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="bottom" secondItem="Kvk-Rf-fhJ" secondAttribute="bottom" id="NYx-Jd-ewf"/>
+                            <constraint firstItem="Kvk-Rf-fhJ" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" id="Tbu-ef-YgH"/>
+                            <constraint firstItem="fQZ-KI-GVf" firstAttribute="trailing" secondItem="Kvk-Rf-fhJ" secondAttribute="trailing" id="hnd-0C-liM"/>
+                            <constraint firstItem="Kvk-Rf-fhJ" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="uA6-bo-FHm"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Scan" id="imr-oi-kbn"/>
                     <connections>
-                        <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
+                        <outlet property="arView" destination="Kvk-Rf-fhJ" id="6kc-rX-p8M"/>
+                        <outlet property="captureBtn" destination="qoo-Ct-2tF" id="Xuh-9u-kly"/>
+                        <outlet property="navigationItems" destination="imr-oi-kbn" id="bby-Fl-6h2"/>
+                        <segue destination="ziW-5l-7Oe" kind="show" identifier="segToRenderVC" id="pGj-W8-ltJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-326.08695652173918" y="-856.47321428571422"/>
+        </scene>
+        <!--Render-->
+        <scene sceneID="poX-40-dcr">
+            <objects>
+                <viewController storyboardIdentifier="renderVC" id="ziW-5l-7Oe" customClass="RenderViewController" customModule="SceneScan" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MQ8-1a-AU2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6DL-Bx-fuL" customClass="ARSCNView">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            </sceneKitView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAX-aN-evq">
+                                <rect key="frame" x="110.5" y="783.5" width="193" height="48.5"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Export Model">
+                                    <fontDescription key="titleFontDescription" name="GillSans" family="Gill Sans" pointSize="30"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="exportBtn:" destination="ziW-5l-7Oe" eventType="touchUpInside" id="Hwy-MI-gXg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3vm-Xh-HT1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="hAX-aN-evq" firstAttribute="centerX" secondItem="MQ8-1a-AU2" secondAttribute="centerX" id="2OZ-y0-YF4"/>
+                            <constraint firstItem="3vm-Xh-HT1" firstAttribute="bottom" secondItem="hAX-aN-evq" secondAttribute="bottom" constant="30" id="LwG-9s-Kvz"/>
+                            <constraint firstItem="3vm-Xh-HT1" firstAttribute="trailing" secondItem="6DL-Bx-fuL" secondAttribute="trailing" id="Vo7-dC-oC4"/>
+                            <constraint firstItem="6DL-Bx-fuL" firstAttribute="top" secondItem="3vm-Xh-HT1" secondAttribute="top" id="Yhz-hL-NGB"/>
+                            <constraint firstItem="6DL-Bx-fuL" firstAttribute="leading" secondItem="3vm-Xh-HT1" secondAttribute="leading" id="Z3f-Gk-FcK"/>
+                            <constraint firstItem="3vm-Xh-HT1" firstAttribute="bottom" secondItem="6DL-Bx-fuL" secondAttribute="bottom" id="qzi-h2-cAT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Render" id="ngE-I6-1Ps"/>
+                    <connections>
+                        <outlet property="sceneView" destination="6DL-Bx-fuL" id="asG-Rg-ve4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ze1-WR-Fvi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="578" y="-856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Cxz-2f-4Ds">
+            <objects>
+                <navigationController id="KEU-CS-VCd" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yyr-c4-20y">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BV1-FR-VrT" kind="relationship" relationship="rootViewController" id="yOh-YX-4A7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Myx-Gr-PmQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1235" y="-856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="recordingButton_173x173" width="85.333335876464844" height="85.333335876464844"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
